changed to tree set for serialization consistency